# OpenDiablo2

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS  ColorConvert.go  Engine.go  MPQFont.go  MPQStream.go  OpenDiablo2.sln  Palette.go  README.md  ResourceHacker.ini  SceneMainMenu.go  SoundEntry.go  Sprite.go  StringUtils.go  UILabel.go  appveyor.yml  azure-pipelines.yml  build.sh  cibuild.sh  config.json  config.json.default  et  go.mod  go.sum  main.go  run.sh  tagdev.bat
.circleci/: config.yml
.docs/: profiling.md
.github/: FUNDING.yml  label-pr.yml
Common/: AnimatedEntity.go  AnimationData.go  BitMuncher.go  BitStream.go  BitStream_test.go  BuildInfo.go  Cof.go  ColorConvert.go  Dcc.go  Drawable.go  FileProvider.go  GameState.go  Hero.go  LevelPresets.go  LevelTypes.go  LevelWarp.go  Math.go  Missiles.go  MpqFileRecord.go  ObjectLookup.go  ObjectTypes.go  Objects.go  Palette.go  Rectangle.go  SceneInterface.go  Sounds.go  Sprite.go  SpriteProvider.go  StreamReader.go  StreamReader_test.go  StreamWriter.go  StreamWriter_test.go  StringUtils.go  TextDictionary.go  UniqueItems.go  Weapons.go
Compression/: Huffman.go  Wav.go
Core/: Engine.go
MPQ/: CryptoBuff.go  MPQ.go  MPQStream.go
Map/: DS1.go  DT1.go  Engine.go  Orientation.go  Region.go
MapEngine/: DS1.go  DT1.go  Orientation.go  Region.go
OpenDiablo2/: App.config  CommandLineOptions.cs  Engine.go  MPQ.go  OpenDiablo2.csproj  Program.cs  UILabel.go  credits.txt  log4net.config  packages.config
OpenDiablo2.Common/: AutofacModule.cs  OpenDiablo2.Common.csproj  Palettes.cs  ResourcePaths.cs  StringUtils.cs  packages.config
OpenDiablo2.Common.UT/: OpenDiablo2.Common.UT.csproj  UT_EnemyState.cs  UT_MobState.cs  UT_PlayerState.cs  UT_Stat.cs  packages.config
OpenDiablo2.Core/: AutofacModule.cs  Cache.cs  EngineDataManager.cs  GameEngine.cs  ItemManager.cs  MPQProvider.cs  MapGenerator.cs  OpenDiablo2.Core.csproj  ResourceManager.cs  SessionServer.cs  TextDictionary.cs  packages.config
OpenDiablo2.Core.UT/: OpenDiablo2.Core.UT.csproj  UT_EngineDataManager.cs  UT_MobManager.cs  packages.config
OpenDiablo2.Game/: CMakeLists.txt  main.cpp
OpenDiablo2.Game/src/: D2Engine.cpp  main.cpp
OpenDiablo2.GameServer/: AutofacModule.cs  GameServer.cs  OpenDiablo2.GameServer.csproj
OpenDiablo2.Graphics/: CMakeLists.txt
OpenDiablo2.MapGenerators/: AutofacModule.cs  BloodMoor.cs  OpenDiablo2.MapGenerators.csproj  packages.config
OpenDiablo2.OS/: CMakeLists.txt
OpenDiablo2.OS/include/: D2Window.h
OpenDiablo2.OS/src/: D2Window.cpp
OpenDiablo2.SDL2/: AutofacModule.cs  OpenDiablo2.SDL2.csproj  SDL2CharacterRenderer.cs  SDL2Extensions.cs  SDL2Font.cs  SDL2Label.cs  SDL2MouseCursor.cs  SDL2MusicPlayer.cs  SDL2MusicProvider.cs  SDL2RenderWindow.cs  SDL2SoundProvider.cs  SDL2Sprite.cs  SDL2Texture.cs  packages.config
OpenDiablo2.Scenes/: AutofacModule.cs  CharacterSelection.cs  Credits.cs  Game.cs  MainMenu.cs  OpenDiablo2.Scenes.csproj  SelectHeroClass.cs  packages.config
OpenDiablo2.ServiceBus/: AutofacModule.cs  LocalSessionManager.cs  OpenDiablo2.ServiceBus.csproj  SessionManager.cs  SessionServer.cs  app.config  packages.config
OpenDiablo2.TestConsole/: OpenDiablo2.TestConsole.csproj  Program.cs  packages.config
PaletteDefs/: PaletteDefs.go
Palettes/: Palettes.go
ResourcePaths/: ResourcePaths.go
Scenes/: BlizzardIntro.go  CharacterSelect.go  Credits.go  MainMenu.go  MapEngineTest.go  Scene.go  SceneMainMenu.go  SceneProvider.go  SelectHeroClass.go
Sound/: AudioProvider.go  SoundEffect.go  SoundEntry.go
UI/: Button.go  Font.go  Label.go  Manager.go  UILabel.go  Widget.go
Video/: BinkDecoder.go
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
common/: AnimatedEntity.go  AnimationData.go  Armor.go  BitMuncher.go  BitStream.go  BitStream_test.go  BuildInfo.go  Cof.go  ColorConvert.go  Configuration.go  DataDictionary.go  Dcc.go  Drawable.go  FileProvider.go  GameState.go  Hero.go  LevelPresets.go  LevelTypes.go  LevelWarp.go  Math.go  Missiles.go  MonStats.go  MpqFileRecord.go  NPC.go  Object.go  ObjectLookup.go  ObjectTypes.go  Objects.go  Palette.go  Path.go  Rectangle.go  Sounds.go  Sprite.go  StreamReader.go  StreamReader_test.go  StreamWriter.go  StreamWriter_test.go  StringUtils.go  TextDictionary.go  Weapons.go  (+3 more)
compression/: Huffman.go  Wav.go
core/: Engine.go
d2app/: app.go  app_ecs.go  capture_state.go  console_commands.go  initialization.go
d2asset/: animation.go  animation_manager.go  archive_manager.go  asset_manager.go  (+6 more)
src/: CMakeLists.txt
src/App/: OpenDiablo2.go
src/Common/CLI11/: CLI11.hpp
src/OpenDiablo2/: CryptoBuff.go  Math.go  Palette.go  SceneMainMenu.go
src/OpenDiablo2.Common/: CMakeLists.txt
src/OpenDiablo2.Common/include/OpenDiablo2.Common/: D2DataManager.h  D2EngineConfig.h  D2Palette.h  D2Point.h  D2ResourcePath.h  D2Size.h  D2Sprite.h
src/OpenDiablo2.Common/src/: D2DataManager.cpp  D2Sprite.cpp
src/OpenDiablo2.Game/: CMakeLists.txt
src/OpenDiablo2.Game/include/OpenDiablo2.Game/: D2DataManager.h  D2Engine.h  D2EngineConfig.h
src/OpenDiablo2.Game/include/OpenDiablo2.Game/Common/: D2Palette.h  D2ResourcePath.h  Palette.h
src/OpenDiablo2.Game/include/OpenDiablo2.Game/Scenes/: D2MainMenu.h  D2Scene.h
src/OpenDiablo2.Game/src/: D2DataManager.cpp  D2Engine.cpp  main.cpp
src/OpenDiablo2.Game/src/Scenes/: D2MainMenu.cpp
src/OpenDiablo2.Graphics/: CMakeLists.txt
src/OpenDiablo2.Graphics/include/OpenDiablo2.Graphics/: D2Graphics.h
src/OpenDiablo2.Graphics/src/: D2Graphics.cpp
src/OpenDiablo2.OS/: CMakeLists.txt
src/OpenDiablo2.OS/include/OpenDiablo2.OS/: D2Window.h
src/OpenDiablo2.OS/src/: D2Window.cpp
src/OpenDiablo2.SDL2/: CMakeLists.txt
src/OpenDiablo2.SDL2/include/OpenDiablo2.System/: D2Graphics.h  D2Input.h  D2Sprite.h
src/OpenDiablo2.SDL2/src/: D2Graphics.cpp  D2Input.cpp  D2Sprite.cpp
src/OpenDiablo2/Common/: SceneInterface.go
src/OpenDiablo2/ResourcePaths/: ResourcePaths.go
src/cmake/: FindSDL2_mixer.cmake
(+1604 files in other folders)
